# medicalUT_IT

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  RELEASE_v2.7.0.md  alerts.c.gcov  build.bat  create_installer.bat  generate_docs.bat  gui_auth.c.gcov  installer.iss  make_icon.py  patient.c.gcov  run_coverage.bat  run_tests.bat  vitals.c.gcov
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  dvt.yml  pipeline.yml  release.yml  static-analysis.yml
agentry/: .env.example  .gitignore  README.md  config.yml  start.ps1  start.sh
build_rel21/: CMakeCache.txt  Makefile  cmake_install.cmake
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
build_v18/: CMakeCache.txt  Makefile  cmake_install.cmake
build_v18_full/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  results_integration.xml  results_unit.xml
build_v18_full/Testing/Temporary/: CTestCostData.txt
build_v18_full/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_v21/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  results_integration.xml  results_unit.xml
build_v21/Testing/Temporary/: CTestCostData.txt
build_v21/mingw_compat/: debugapi.h
build_v21/tests/: CTestTestfile.cmake  Makefile
build_v22/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_v22/tests/: CTestTestfile.cmake  Makefile  results_unit.xml
build_v23/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_v23/mingw_compat/: crtdbg.h  mingw32_gtest_compat.h
build_v23/tests/: CTestTestfile.cmake  Makefile
build_v24/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_v24/tests/: CTestTestfile.cmake  Makefile
build_v25/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_v25/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
docs/: ARCHITECTURE.md  BRANCHING_STRATEGY.md  DEVOPS_WORKFLOWS.md  SCM_PLAN.md
docs/ai/: agentry-medical-pilot.md  agentry-model-characterization.md
docs/ai/roles/: ai_safety_reviewer.md  architect.md  code_reviewer.md  cybersecurity_reviewer.md  implementer.md  merger.md  quality_reviewer.md  regulatory_reviewer.md  release.md  researcher.md  reviewer.md  risk_analyst.md  tester.md  traceability_tracker.md
docs/history/risk/: 101-export-current-trend-data-to-csv.md  102-show-baseline-markers-on-trend-sparklines.md  27-documentation-reconcile-legacy-repo-references-and-stale-test-counts.md  28-traceability-refresh-swr-gui-auth-verification-references.md  32-traceability-restore-defensible-sys-mappings.md  33-release-docs-align-installer-artifact-names-with-current-2-7-0-outputs.md  37-session-alarm-event-review-log.md  38-export-patient-session-review-snapshot.md  42-historical-reading-drill-down-review.md  43-simulation-mode-not-for-patient-monitoring.md  49-compact-dashboard-density-preset.md  53-show-top-alert-cause-beside-aggregate-status-pill.md  54-add-a-minimal-operator-action-audit-trail.md  57-read-only-active-alarm-limit-summary-dashboard.md  58-show-patient-bed-location-context-in-the-dashboard-header.md  60-make-clinician-idle-timeout-configurable.md  61-add-a-non-clinical-session-note-banner.md  README.md  (+14 more)
docs/html/: alerts_8c.html  alerts_8c.js  alerts_8c__incl.map  alerts_8c__incl.md5  alerts_8c_a98b6140a4d21520d639bc81d1f7c08b7_cgraph.map  alerts_8c_a98b6140a4d21520d639bc81d1f7c08b7_cgraph.md5  alerts_8c_a98b6140a4d21520d639bc81d1f7c08b7_icgraph.map  alerts_8c_a98b6140a4d21520d639bc81d1f7c08b7_icgraph.md5  alerts_8c_source.html  alerts_8h.html  alerts_8h.js  alerts_8h__dep__incl.map  alerts_8h__dep__incl.md5  alerts_8h__incl.map  alerts_8h__incl.md5  alerts_8h_a98b6140a4d21520d639bc81d1f7c08b7_cgraph.map  alerts_8h_a98b6140a4d21520d639bc81d1f7c08b7_cgraph.md5  alerts_8h_a98b6140a4d21520d639bc81d1f7c08b7_icgraph.map  alerts_8h_a98b6140a4d21520d639bc81d1f7c08b7_icgraph.md5  alerts_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  (+264 more)
docs/xml/: Doxyfile.xml  alerts_8c.xml  alerts_8h.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  gui__auth_8c.xml  gui__auth_8h.xml  gui__main_8c.xml  hw__vitals_8h.xml  index.xml  main_8c.xml  patient_8c.xml  patient_8h.xml  sim__vitals_8c.xml  struct_alert.xml  struct_app_state.xml  struct_patient_info.xml  struct_patient_record.xml  struct_vital_signs.xml  vitals_8c.xml  vitals_8h.xml
dvt/: DVT_Protocol.md  run_dvt.py
dvt/automation/: run_dvt.py
dvt/results/: dvt_report_2026-04-08_000454.txt  integration_results.xml  unit_results.xml
include/: alarm_limits.h  alerts.h  app_config.h  dashboard_freshness.h  gui_auth.h  gui_users.h  gui_utf8.h  localization.h  news2.h  patient.h  session_export.h  trend.h  vitals.h
requirements/: README.md  SWR.md  SYS.md  TRACEABILITY.md  UNS.md
resources/: app.rc
scripts/: configure-branch-protection.sh  install-hooks.sh  run_pipeline.sh
scripts/hooks/: commit-msg  pre-commit  pre-push
src/: alarm_limits.c  alerts.c  app_config.c  dashboard_freshness.c  gui_auth.c  gui_main.c  gui_users.c  gui_utf8.c  localization.c  news2.c  patient.c  session_export.c  sim_vitals.c  trend.c  vitals.c
tests/: CMakeLists.txt
tests/integration/: test_alert_escalation.cpp  test_patient_monitoring.cpp  test_session_export.cpp
tests/unit/: test_alarm_limits.cpp  test_alerts.cpp  test_app_config.cpp  test_auth.cpp  test_config.cpp  test_dashboard_freshness.cpp  test_localization.cpp  test_news2.cpp  test_patient.cpp  test_session_export.cpp  test_trend.cpp  test_vitals.cpp
(+116 files in other folders)
